--- a/minigames/rpg_shop.html
+++ b/minigames/rpg_shop.html
@@ -49,6 +49,15 @@
     .muted{color:var(--muted);font-size:13px;margin:0;line-height:1.45;text-align:center;}
     .placeholder{border:1px dashed var(--stroke);border-radius:12px;padding:18px;text-align:center;background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);
       box-shadow:var(--shadow);}
+    .pill{display:inline-flex;align-items:center;gap:8px;padding:8px 10px;border-radius:999px;border:1px solid var(--stroke2);color:var(--text);background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);font-weight:800;width:max-content;}
+    .card{border:1px solid var(--stroke);border-radius:14px;padding:12px;background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);box-shadow:var(--shadow);display:flex;flex-direction:column;gap:8px;}
+    .card-title{margin:0;font-size:15px;font-weight:900;display:flex;gap:6px;align-items:center;}
+    .card-desc{margin:0;font-size:13px;color:var(--muted);}
+    .card-meta{font-size:12px;color:var(--muted);display:flex;gap:10px;flex-wrap:wrap;}
+    .card-actions{display:flex;gap:8px;align-items:center;flex-wrap:wrap;}
+    .inline-badge{padding:6px 8px;border-radius:999px;border:1px solid var(--stroke);font-size:12px;color:var(--muted);}
+    .btn{padding:10px 12px;border-radius:10px;border:1px solid var(--stroke2);background:linear-gradient(180deg,var(--blue) 0%,var(--blue2) 100%);color:white;font-weight:800;cursor:pointer;}
+    .btn:disabled{opacity:.6;cursor:not-allowed;}
   </style>
 </head>
 <body>
@@ -59,7 +68,7 @@
         <h1>Магазин RPG</h1>
         <span>Подборки усилений и улучшений</span>
       </div>
-      <div style="width:64px"></div>
+      <div id="balancePill" class="pill">Баланс: —</div>
     </header>
 
     <section class="section">
@@ -71,15 +80,11 @@
       </div>
 
       <div data-view="auto">
-        <div class="placeholder">
-          <p class="muted">Раздел скоро заполнится автоматическими добытчиками.</p>
-        </div>
+        <div id="autoList" class="list"></div>
       </div>
 
       <div data-view="storage" style="display:none;">
-        <div class="placeholder">
-          <p class="muted">Хранилища появятся здесь.</p>
-        </div>
+        <div id="storageList" class="list"></div>
       </div>
 
       <div data-view="tools" style="display:none;">
@@ -98,7 +103,29 @@
 
   <script>
     const tgInstance = initTelegramGuard();
+    const storageList = document.getElementById('storageList');
+    const autoList = document.getElementById('autoList');
+    const balancePill = document.getElementById('balancePill');
 
+    const BAG_ITEMS = [
+      {id:'bag1', name:'Мешок из ткани', cost:3, cap:50},
+      {id:'bag2', name:'Сумка старателя', cost:6, cap:100},
+      {id:'bag3', name:'Рюкзак шахтёра', cost:12, cap:200},
+      {id:'bag4', name:'Укреплённый рюкзак', cost:18, cap:300},
+      {id:'bag5', name:'Экспедиционный мешок', cost:25, cap:450},
+      {id:'bag6', name:'Каркасная сумка', cost:33, cap:650},
+      {id:'bag7', name:'Горный баул', cost:42, cap:900},
+      {id:'bag8', name:'Сумка инженера', cost:55, cap:1200},
+      {id:'bag9', name:'Артефактный рюкзак', cost:70, cap:1600},
+      {id:'bag10', name:'Легендарный контейнер', cost:95, cap:2200},
+      {id:'bag11', name:'Полевой контейнер', cost:125, cap:3000},
+      {id:'bag12', name:'Стабилизированный ранец', cost:160, cap:4000},
+      {id:'bag13', name:'Астероидный бокс', cost:200, cap:5200},
+      {id:'bag14', name:'Квантовый рюкзак', cost:250, cap:6600},
+      {id:'bag15', name:'Хранилище первопроходца', cost:310, cap:8200},
+    ];
+
+    let currentState = null;
     function switchTab(tab){
       document.querySelectorAll('[data-tab]').forEach(el=>{
         el.classList.toggle('active', el.dataset.tab === tab);
@@ -106,6 +133,118 @@
       document.querySelectorAll('[data-view]').forEach(view=>{
         view.style.display = view.dataset.view === tab ? 'block' : 'none';
       });
+    }
+
+    function renderBalance(){
+      const bal = currentState?.balance ?? '—';
+      balancePill.textContent = `Баланс: ${bal}`;
+    }
+
+    async function buyItem(category, item_id){
+      const res = await apiPost('/api/rpg/buy', {category, item_id});
+      if(res?.ok){
+        currentState = res.state;
+        renderAll();
+      }
+    }
+
+    function renderBags(){
+      storageList.innerHTML = '';
+      if(!currentState){
+        storageList.innerHTML = '<div class="placeholder"><p class="muted">Загрузка...</p></div>';
+        return;
+      }
+      const owned = new Set(currentState?.owned?.bags || []);
+      BAG_ITEMS.forEach(b=>{
+        const el = document.createElement('div');
+        el.className = 'card';
+        el.innerHTML = `
+          <p class="card-title">🎒 ${b.name}</p>
+          <p class="card-desc">+${b.cap} к лимиту каждого ресурса.</p>
+          <div class="card-meta">
+            <span class="inline-badge">Цена: 🪙 ${b.cost}</span>
+            <span class="inline-badge">Вместимость: ${b.cap}</span>
+          </div>
+        `;
+        const actions = document.createElement('div');
+        actions.className = 'card-actions';
+        const btn = document.createElement('button');
+        btn.className = 'btn';
+        if(owned.has(b.id)){
+          btn.disabled = true;
+          btn.textContent = 'Куплено';
+        } else {
+          const canBuy = (currentState?.balance || 0) >= b.cost;
+          btn.disabled = !canBuy;
+          btn.textContent = canBuy ? 'Купить' : 'Не хватает очков';
+          btn.addEventListener('click', ()=>buyItem('bags', b.id));
+        }
+        actions.appendChild(btn);
+        el.appendChild(actions);
+        storageList.appendChild(el);
+      });
+    }
+
+    function renderAuto(){
+      autoList.innerHTML = '';
+      const miners = currentState?.auto?.miners || [];
+      if(!miners.length){
+        autoList.innerHTML = '<div class="placeholder"><p class="muted">Нет доступных добытчиков.</p></div>';
+        return;
+      }
+      miners.forEach(m=>{
+        const el = document.createElement('div');
+        el.className = 'card';
+        const reqText = Object.entries(m.missing || {}).map(([k,v])=>`${k}: ${v}`).join(', ');
+        const badgeText = m.active ? 'Работает' : (m.unlocked ? 'Готов к запуску' : 'Требует ресурсов');
+        const bagName = BAG_ITEMS.find(b=>b.id === m.bag_req)?.name || m.bag_req;
+        el.innerHTML = `
+          <p class="card-title">🤖 ${m.name}</p>
+          <p class="card-desc">+${m.rate} ${m.resource} каждые ${m.interval} сек.</p>
+          <div class="card-meta">
+            <span class="inline-badge">${badgeText}</span>
+            ${m.bag_req ? `<span class="inline-badge">Нужен: ${bagName}</span>` : ''}
+          </div>
+          <p class="card-desc">${reqText ? 'Нужно ресурсов: ' + reqText : 'Требования выполнены.'}</p>
+        `;
+        const actions = document.createElement('div');
+        actions.className = 'card-actions';
+        const btn = document.createElement('button');
+        btn.className = 'btn';
+        if(m.active){
+          btn.textContent = 'Остановить';
+          btn.addEventListener('click', ()=>toggleAuto(m.id, 'stop'));
+        } else {
+          btn.textContent = 'Запустить';
+          btn.disabled = !m.unlocked;
+          btn.addEventListener('click', ()=>toggleAuto(m.id, 'start'));
+        }
+        actions.appendChild(btn);
+        el.appendChild(actions);
+        autoList.appendChild(el);
+      });
+    }
+
+    async function toggleAuto(miner_id, action){
+      const res = await apiPost('/api/rpg/auto', {miner_id, action});
+      if(res?.ok){
+        currentState = res.state;
+        renderAll();
+      }
+    }
+
+    function renderAll(){
+      renderBalance();
+      renderBags();
+      renderAuto();
+    }
+
+    async function loadState(){
+      const res = await apiGet('/api/rpg/state');
+      if(res?.ok){
+        currentState = res.state;
+        renderAll();
+      }
     }
 
     document.querySelectorAll('[data-tab]').forEach(tab=>{
@@ -116,6 +255,7 @@
       if(!tgInstance) return;
       const profile = await ensureNicknameOrRedirect();
       if(!profile || !profile.ok) return;
+      await loadState();
     })();
   </script>
 </body>
